--- a/src/views/layouts/realTimeProducts.hbs
+++ b/src/views/layouts/realTimeProducts.hbs
@@ -1,3 +1,15 @@
+<form id="formCreateProduct">
+    <input type="text" id="title" placeholder="Ingrese nombre de producto" required/>
+    <input type="number" id="price" placeholder="Ingrese el precio del producto" required/>
+    <input type="number" id="stock" placeholder="Ingrese cantidad del producto" required/>
+    <input type="text" id="code" placeholder="Ingrese codigo del producto" required/>
+    <button type="submit">Agregar Producto</button>
+
+
+</form>
+
+
+
 <div class="container" id="realTimeProducts"></div>
 
 
